--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <h1>Bienvenidos a mi página web</h1>
     <p>Este es un párrafo de ejemplo.</p>
     <div class="caja">Soy una caja con estilo.</div>
+    <div>
+  <label>Fecha de nacimiento </label>
+  <input id="registrationform" type="date" />
+  </div>
 </body>
 </html>
